[tool.poetry]
name = "api-demo"
version = "0.1.0"
description = "api-demo"
authors = ["Yawen Li <yawenl@mun.ca>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
rasterio = "^1.3.8"
cloudpathlib = "^0.15.1"
rio-cogeo = "^4.0.1"
google-cloud-storage = "^2.10.0"
uvicorn = "^0.23.1"
fastapi-cloudauth = "^0.4.3"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
uuid = "^1.30"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
